--- a/7.@apply directive in Tailwind/style.css
+++ b/7.@apply directive in Tailwind/style.css
@@ -8,4 +8,9 @@
 .btn2{
     @apply text-white bg-green-400 hover:bg-green-500 focus:ring-2 focus:ring-yellow-300 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 
 }
+
+.btn3{
+    @apply  text-white bg-green-400 hover:bg-green-500 focus:ring-2 focus:ring-yellow-300 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 
+}
+
 @tailwind utilities;
